add jwt config